--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
