--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "jquery-ui": "^1.12.1",
+    "moment": "^2.17.1",
     "react": "^0.14.6",
+    "react-day-picker": "^5.1.2",
     "react-dom": "^0.14.6",
     "react-router": "^3.0.2"
   }
