--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^0.14.6",
     "react-day-picker": "^5.1.2",
     "react-dom": "^0.14.6",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "select2": "^4.0.3"
   }
 }
