--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "mobx-react": "^4.1.2",
     "moment": "^2.17.1",
     "react": "^0.14.6",
+    "react-addons-css-transition-group": "^15.4.2",
     "react-day-picker": "^5.1.2",
     "react-dom": "^0.14.6",
     "react-router": "^3.0.2",
-    "react-router-transition": "0.0.6",
     "scrollreveal": "^3.3.4",
     "select2": "^4.0.3"
   }
