--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-day-picker": "^5.1.2",
     "react-dom": "^0.14.6",
     "react-router": "^3.0.2",
+    "react-toastr": "^2.8.2",
     "scrollreveal": "^3.3.4",
     "select2": "^4.0.3"
   }
