--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment": "^2.17.1",
     "react": "^0.14.6",
     "react-addons-css-transition-group": "^15.4.2",
+    "react-cookie": "^1.0.4",
     "react-day-picker": "^5.1.2",
     "react-dom": "^0.14.6",
     "react-router": "^3.0.2",
