--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-cookie": "^1.0.4",
     "react-day-picker": "^5.1.2",
     "react-dom": "^0.14.6",
+    "react-helmet": "^5.1.3",
     "react-router": "^3.0.2",
+    "react-scrollable-anchor": "^0.4.2",
     "react-toastr": "^2.8.2",
     "scrollreveal": "^3.3.4",
     "select2": "^4.0.3"
