--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Starter Kit for ReactJS project with hot code reloading",
   "scripts": {
-    "start": "webpack && node server.js",
+    "start": "NODE_ENV=production ./node_modules/.bin/webpack -p && node server.js",
     "lint": "eslint src"
   },
   "keywords": [],
