--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
-  "name": "React",
+  "name": "vanila-homepage",
   "version": "1.0.0",
-  "description": "Starter Kit for ReactJS project with hot code reloading",
-  "scripts": {
-    "start": "node server.js",
-    "lint": "eslint src"
-  },
+  "description": "the vanila.io homepage",
   "keywords": [],
   "author": "stefan@vanila.io",
+  "scripts": {
+    "build": "webpack -p",
+    "lint": "eslint src",
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "animate.css": "^3.5.2",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
+    "jquery-ui": "^1.12.1",
+    "mobx": "^3.1.5",
+    "mobx-react": "^4.1.2",
+    "moment": "^2.17.1",
+    "react": "^15.6.1",
+    "react-cookie": "^1.0.4",
+    "react-day-picker": "^5.1.2",
+    "react-dom": "^15.6.1",
+    "react-helmet": "^5.1.3",
+    "react-router": "^3.0.2",
+    "react-scrollable-anchor": "^0.4.2",
+    "react-toastr": "^2.8.2",
+    "scrollreveal": "^3.3.4",
+    "select2": "^4.0.3"
+  },
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
@@ -29,25 +50,5 @@
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
-  },
-  "dependencies": {
-    "animate.css": "^3.5.2",
-    "bootstrap": "^3.3.7",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.1.1",
-    "jquery-ui": "^1.12.1",
-    "mobx": "^3.1.5",
-    "mobx-react": "^4.1.2",
-    "moment": "^2.17.1",
-    "react": "^15.6.1",
-    "react-cookie": "^1.0.4",
-    "react-day-picker": "^5.1.2",
-    "react-dom": "^15.6.1",
-    "react-helmet": "^5.1.3",
-    "react-router": "^3.0.2",
-    "react-scrollable-anchor": "^0.4.2",
-    "react-toastr": "^2.8.2",
-    "scrollreveal": "^3.3.4",
-    "select2": "^4.0.3"
   }
 }
