--- a/package.json
+++ b/package.json
@@ -5,9 +5,21 @@
   "keywords": [],
   "author": "stefan@vanila.io",
   "scripts": {
-    "build": "webpack -p",
-    "lint": "eslint src",
-    "start": "node server.js"
+    "build": "parcel build src/index.html",
+    "lint": "eslint src --fix",
+    "start": "parcel src/index.html"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
     "animate.css": "^3.5.2",
@@ -30,25 +42,13 @@
     "select2": "^4.0.3"
   },
   "devDependencies": {
-    "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.0.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
-    "compression-webpack-plugin": "^1.0.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
-    "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.2",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "parcel": "^1.12.4",
+    "parcel-plugin-clean-dist": "^0.0.6",
+    "parcel-plugin-imagemin": "^4.0.2",
+    "parcel-plugin-static-files-copy": "^2.5.0"
+  },
+  "staticFiles": {
+    "staticPath": "public",
+    "watcherGlob": "**"
   }
 }
