--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "author": "stefan@vanila.io",
   "scripts": {
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --no-source-maps",
     "lint": "eslint src --fix",
     "start": "parcel src/index.html"
   },
@@ -22,24 +22,11 @@
     ]
   },
   "dependencies": {
-    "animate.css": "^3.5.2",
-    "bootstrap": "^3.3.7",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.1.1",
-    "jquery-ui": "^1.12.1",
-    "mobx": "^3.1.5",
-    "mobx-react": "^4.1.2",
-    "moment": "^2.17.1",
     "react": "^15.6.1",
-    "react-cookie": "^1.0.4",
-    "react-day-picker": "^5.1.2",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
     "react-router": "^3.0.2",
-    "react-scrollable-anchor": "^0.4.2",
-    "react-toastr": "^2.8.2",
-    "scrollreveal": "^3.3.4",
-    "select2": "^4.0.3"
+    "scrollreveal": "^3.3.4"
   },
   "devDependencies": {
     "parcel": "^1.12.4",
