--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "parcel": "^1.12.4",
     "parcel-plugin-clean-dist": "^0.0.6",
+    "parcel-plugin-imagemin": "^4.0.2",
     "parcel-plugin-static-files-copy": "^2.5.0"
   },
   "staticFiles": {
