--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
   "name": "vanila-homepage",
-  "version": "1.0.0",
-  "description": "the vanila.io homepage",
-  "keywords": [],
-  "author": "stefan@vanila.io",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "build": "parcel build src/index.html --no-source-maps",
-    "lint": "eslint src --fix",
-    "start": "parcel src/index.html"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": ""
   },
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-helmet": "^5.1.3",
-    "react-router": "^3.0.2",
-    "scrollreveal": "^3.3.4"
+    "jquery": "^3.5.1",
+    "next": "10.0.4",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-helmet": "^6.1.0",
+    "scrollreveal": "^4.0.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --fix"
+    ],
+    "*": [
+      "pretty-quick --staged"
+    ]
   },
   "devDependencies": {
-    "parcel": "^1.12.4",
-    "parcel-plugin-clean-dist": "^0.0.6",
-    "parcel-plugin-imagemin": "^4.0.2",
-    "parcel-plugin-static-files-copy": "^2.5.0"
-  },
-  "staticFiles": {
-    "staticPath": "public",
-    "watcherGlob": "**"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.16.0",
+    "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
   }
 }
