fix: move to nextjs

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": ""
+    "start": "next start"
   },
   "dependencies": {
     "jquery": "^3.5.1",
