--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "jquery": "^3.5.1",
+    "lit-html": "^1.3.0",
+    "nanoid": "^3.1.20",
     "next": "10.0.4",
+    "nodemailer": "^6.4.17",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
