--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,linux,macos,windows,vim,visualstudiocode
+
+# Local Netlify folder
+.netlify
