--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-on-netlify",
     "start": "next start"
   },
   "dependencies": {
     "jquery": "^3.5.1",
-    "lit-html": "^1.3.0",
     "nanoid": "^3.1.20",
     "next": "10.0.4",
     "nodemailer": "^6.4.17",
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
+    "next-on-netlify": "^2.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0"
   }
