--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
+    "react-lazyload": "^3.1.0",
     "scrollreveal": "^4.0.7"
   },
   "husky": {
